[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/scenes/main/level/level_end_scene/level_end_scene.gd" type="Script" id=1]
[ext_resource path="res://ui/assets/art/fonts/typewriter.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/assets/art/general/laurels/Laurel 2.png" type="Texture" id=3]
[ext_resource path="res://ui/assets/art/general/laurels/Laurel 1.png" type="Texture" id=4]
[ext_resource path="res://game/assets/fonts/veteran typewriter.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.682353, 0.152941, 0.588235 )
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.517647, 0.0980392, 0.0980392, 0.686275 )
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75

[node name="LevelEndScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
score = 1000000
laurels = 3

[node name="Background" type="ColorRect" parent="."]
margin_right = 1916.0
margin_bottom = 1076.0
color = Color( 0.196078, 0.109804, 0.411765, 1 )

[node name="Content" type="MarginContainer" parent="."]
margin_right = 1916.0
margin_bottom = 1076.0
custom_constants/margin_right = 250
custom_constants/margin_top = 25
custom_constants/margin_left = 250
custom_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
margin_left = 250.0
margin_top = 25.0
margin_right = 1666.0
margin_bottom = 926.0

[node name="Buttons" type="VBoxContainer" parent="Content/VBoxContainer"]
margin_right = 1416.0
margin_bottom = 901.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Score" type="MarginContainer" parent="Content/VBoxContainer/Buttons"]
margin_right = 1416.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="ScoreLabel" type="Label" parent="Content/VBoxContainer/Buttons/Score"]
margin_left = 100.0
margin_top = 14.0
margin_right = 1316.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 5 )
text = "Score: 0"
align = 1

[node name="Laurels" type="MarginContainer" parent="Content/VBoxContainer/Buttons"]
margin_top = 190.0
margin_right = 1416.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Laurel1" type="AnimatedSprite" parent="Content/VBoxContainer/Buttons/Laurels"]
position = Vector2( 508, 70 )
frames = SubResource( 4 )

[node name="Laurel2" type="AnimatedSprite" parent="Content/VBoxContainer/Buttons/Laurels"]
position = Vector2( 700, 70 )
frames = SubResource( 4 )

[node name="Laurel3" type="AnimatedSprite" parent="Content/VBoxContainer/Buttons/Laurels"]
position = Vector2( 892, 70 )
frames = SubResource( 4 )

[node name="Retry" type="MarginContainer" parent="Content/VBoxContainer/Buttons"]
margin_top = 380.0
margin_right = 1416.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="RetryButton" type="Button" parent="Content/VBoxContainer/Buttons/Retry"]
margin_left = 100.0
margin_right = 1316.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Retry"

[node name="LevelSelect" type="MarginContainer" parent="Content/VBoxContainer/Buttons"]
margin_top = 570.0
margin_right = 1416.0
margin_bottom = 710.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="LevelSelectButton" type="Button" parent="Content/VBoxContainer/Buttons/LevelSelect"]
margin_left = 100.0
margin_right = 1316.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Level Select"

[node name="TitleScreen" type="MarginContainer" parent="Content/VBoxContainer/Buttons"]
margin_top = 760.0
margin_right = 1416.0
margin_bottom = 901.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="TitleScreenButton" type="Button" parent="Content/VBoxContainer/Buttons/TitleScreen"]
margin_left = 100.0
margin_right = 1316.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Title Screen"

[connection signal="pressed" from="Content/VBoxContainer/Buttons/Retry/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/Buttons/LevelSelect/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/Buttons/TitleScreen/TitleScreenButton" to="." method="_on_TitleScreenButton_pressed"]
